src/test/resources/failing/fail63.pnd
@text P(x) <- foobar(x)